--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,700;0,800;0,900;1,700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:ital,wght@0,700;0,900;1,700;1,900&display=swap" rel="stylesheet">
@@ -62,16 +63,16 @@
     <div class="image-containers">
       <img src="./images/desktop/image-graphic-design.jpg" alt="cherry">
       <div>
-          <h4>Graphic design</h4>
-          <p>Great design makes you memorable. We deliver artwork taht underscores you brand message and captures potential
+          <h4 id='graphic'>Graphic design</h4>
+          <p id='graphic'>Great design makes you memorable. We deliver artwork that underscores you brand message and captures potential
               client's attention</p>
       </div>
     </div>
     <div class="image-containers">
         <img src="./images/desktop/image-photography.jpg" alt="orange">
         <div>
-          <h4>Photography</h4>
-          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+          <h4 id='photo'>Photography</h4>
+          <p id='photo'>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </div>
     </div>
   </section>
@@ -85,7 +86,7 @@
                 </p>
                 <div>
                     <h4>Emily R.</h4>
-                    <h5>Mrketing director</h5>
+                    <h5>Marketing director</h5>
                 </div>
             </div>
             <div class="testimonial-card">
